--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: SmartForm
 version: 0.1.0
 api: [3.0.0]
-main: uramnoil¥smartform¥SmartFormPlugin
+main: uramnoil\smartform\SmartFormPlugin
 
 permissions:
   smartform:
